Table student_group {
    id int [pk]
    name varchar
    desc text
}

Table room {
    id int [pk]
    name varchar
}

Table subject {
    id int [pk]
    name varchar
    border boolean
    max_number int
}

Table teacher {
    id int [pk]
    name varchar
}

Table teacher_subject {
    id int [pk]
    teacher_id int [ref: > teacher.id]
    subject_id int [ref: > subject.id]
}

Table room_compatible_subjects {
    id int [pk]
    room_id int [ref: > room.id]
    subject_id int [ref: > subject.id]
}

Table subject_block {
    id int [pk]
    numbers json
    power_block boolean
    max_number int
}

Table subject_block_subjects {
    id int [pk]
    subject_block_id int [ref: > subject_block.id]
    subject_id int [ref: > subject.id]
}

Table subject_block_groups {
    id int [pk]
    subject_block_id int [ref: > subject_block.id]
    group_id int [ref: > student_group.id]
}

Table teacher_availability {
    id int [pk]
    teacher_id int [ref: > teacher.id]
    availability json
}

Table requirement {
    id int [pk]
    teacher_id int [ref: > teacher.id]
    group_id int [ref: > student_group.id]
    subject_id int [ref: > subject.id]
    hours int
}